[package]
name = "cli-news"
version = "0.1.0"
edition = "2021"

description= "A simple news app for the cli, as part of a tutorial learning Rust"
license="MIT"
authors=["Agustin Carnevale"]

[dependencies]
dotenv = "0.15.0"
colour="0.6.0"
newsapi={path = "./newsapi"}
termimad="0.14.2"
crossterm="0.20.0"
